更新政务网首页

--- a/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Start.html
+++ b/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Start.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>无锡市住建部政务服务网</title>
+    <title>无锡市住建局政务服务网</title>
 
     <!-- Bootstrap core CSS -->
     <link href="Common/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
           </button>
           <div class="top_logo">
             <a class="top_logo_a" href="#">
-              <img src="Common/images/logo.png" style="height: 60px;"> <span>无锡市住建部政务服务网</span>
+              <img src="Common/images/logo.png" style="height: 60px;"> <span>无锡市住建局政务服务网</span>
             </a>
           </div>
         </div>
@@ -49,14 +49,14 @@
         <div class="top_main">
           <div class="top_nav">
             <a class="top_nav_sub top_nav_subOn" href="#">首页</a>
-            <a class="top_nav_sub" href="#">工程项目</a>
-            <a class="top_nav_sub" href="#">市场主体</a>
-            <a class="top_nav_sub" href="#">执业人员</a>
-            <a class="top_nav_sub">诚信信息</a>
-            <a class="top_nav_sub">地图服务</a>
+            <a class="top_nav_sub" href="Page_List.aspx?menuno=01">工程项目</a>
+            <a class="top_nav_sub" href="Page_List.aspx?menuno=02">市场主体</a>
+            <a class="top_nav_sub" href="Page_List.aspx?menuno=03">执业人员</a>
+            <a class="top_nav_sub" href="Page_List.aspx?menuno=04">诚信信息</a>
+            <a class="top_nav_sub" href="Map.html">地图服务</a>
           </div>
 
-          <span id="top1"><a href="#" class="js_denglu">你好，请登录</a><a href="#" class="js_zhuce">马上注册</a></span>
+          <span id="top1"><a href="Login.aspx" class="js_denglu">你好，请登录</a><a href="#" class="js_zhuce">马上注册</a></span>
         </div>
 
         <!--
