--- a/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Map.html
+++ b/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Map.html
@@ -57,7 +57,7 @@
 
         <div class="top_main">
           <div class="top_nav">
-            <a class="top_nav_sub" href="Start.html">首页</a>
+            <a class="top_nav_sub" href="Start.aspx">首页</a>
             <a class="top_nav_sub" href="Page_List.aspx?menuno=01">工程项目</a>
             <a class="top_nav_sub" href="Page_List.aspx?menuno=02">市场主体</a>
             <a class="top_nav_sub" href="Page_List.aspx?menuno=03">执业人员</a>
@@ -69,6 +69,27 @@
         </div>
 
     </nav>
+    </div>
+    <div class="container" style="margin-bottom: 2px;">
+
+      <div class="row">
+        <div class="col-md-2"><span class="js_search_01">地址查询：</span> </div>
+        <div class="col-md-4">
+          <input type="text" name="suggestId" id="suggestId" autocomplete="off" class="js_search_02" value="请输入 地点" onclick="if(this.value==&quot;请输入 地点&quot;){this.value=&quot;&quot;;this.focus();}" onblur="if(this.value==&quot;&quot;){this.value=&quot;请输入 地点&quot;}">
+          <div id="searchResultPanel" style="border:1px solid #C0C0C0;width:150px;height:auto; display:none;"></div>
+        </div>
+        <div class="col-md-1">
+          <input type="submit" id="searchBtn" class="js_search_03" value="查询">
+        </div>
+      </div>
+
+      <!--
+      <div class="left_tit_search">
+        <span class="js_search_01">办件进度查询：</span>
+        <input type="text" name="q" autocomplete="off" class="js_search_02" value="请输入 经办人/申请人、单位" onclick="if(this.value==&quot;请输入 经办人/申请人、单位&quot;){this.value=&quot;&quot;;this.focus();}" onblur="if(this.value==&quot;&quot;){this.value=&quot;请输入 经办人/申请人、单位&quot;}">
+        <input type="submit" class="js_search_03" value="查询">
+      </div> -->
+
     </div>
  <div id="allmap"></div>
 
@@ -101,6 +122,69 @@
   var map = new BMap.Map("allmap");  // 创建Map实例
 	map.centerAndZoom("无锡",12);
 	map.enableScrollWheelZoom();
+	$(".anchorBL").remove();
+
+	// 百度地图API功能
+	function G(id) {
+	    return document.getElementById(id);
+	}
+
+	var ac = new BMap.Autocomplete(    //建立一个自动完成的对象
+		{"input": "suggestId"
+		, "location": map
+});
+
+	ac.addEventListener("onhighlight", function (e) {  //鼠标放在下拉列表上的事件
+	    var str = "";
+	    var _value = e.fromitem.value;
+	    var value = "";
+	    if (e.fromitem.index > -1) {
+	        value = _value.province + _value.city + _value.district + _value.street + _value.business;
+	    }
+	    str = "FromItem<br />index = " + e.fromitem.index + "<br />value = " + value;
+
+	    value = "";
+	    if (e.toitem.index > -1) {
+	        _value = e.toitem.value;
+	        value = _value.province + _value.city + _value.district + _value.street + _value.business;
+	    }
+	    str += "<br />ToItem<br />index = " + e.toitem.index + "<br />value = " + value;
+	    G("searchResultPanel").innerHTML = str;
+	});
+
+	var myValue;
+	ac.addEventListener("onconfirm", function (e) {    //鼠标点击下拉列表后的事件
+	    var _value = e.item.value;
+	    myValue = _value.province + _value.city + _value.district + _value.street + _value.business;
+	    G("searchResultPanel").innerHTML = "onconfirm<br />index = " + e.item.index + "<br />myValue = " + myValue;
+
+	    setPlace();
+	});
+
+	function setPlace() {
+	    map.clearOverlays();    //清除地图上所有覆盖物
+	    function myFun() {
+	        var pp = local.getResults().getPoi(0).point;    //获取第一个智能搜索的结果
+	        map.centerAndZoom(pp, 18);
+	        map.addOverlay(new BMap.Marker(pp));    //添加标注
+	    }
+	    var local = new BMap.LocalSearch(map, { //智能搜索
+	        onSearchComplete: myFun
+	    });
+	    local.search(myValue);
+	}
+
+
+	$(function () {
+	    $('#searchBtn').click(function () {
+	        var keyVal = $('#suggestId').val();
+	        var local = new BMap.LocalSearch(map, {
+	            renderOptions: { map: map }
+	        });
+	        local.search(keyVal);
+	    });
+	});
+
 	</script>
   </body>
 </html>
