添加地图页面/项目事项办理详细页面

--- a/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Detail.html
+++ b/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Detail.html
@@ -36,7 +36,7 @@
   <div class="container">
     <div class="top_logo">
       <a class="top_logo_a" href="#">
-        <img src="Common/images/logo.png" style="height: 60px;"> <span>无锡市住建部政务服务网</span>
+        <img src="Common/images/logo.png" style="height: 60px;"> <span>无锡市住建局政务服务网</span>
       </a>
     </div>
   </div>
@@ -78,7 +78,7 @@
         <span>业务序号：</span>
         <p>01</p>
         <span>受理机构：</span>
-        <p>江苏省住房和城乡建设厅</p>
+        <p>无锡市住房和城乡建设局</p>
       </div>
     </div>
   </div>
@@ -93,7 +93,7 @@
         <li><a href="#section5">办理条件</a></li>
         <!--<li><a href="#section6">表格下载服务</a></li>
         <li><a href="#section7">办理结果形式</a></li>-->
-        <li><a href="#section6">收费标准</a></li>
+        <!--<li><a href="#section6">收费标准</a></li>-->
         <!--<li><a href="#section9">委托书</a></li>-->
         <li style="background: none;"><a href="#section7">常见问题</a></li>
       </ul>
@@ -106,15 +106,15 @@
         <div class="section clearfloat">
           <span class="section_11">基本信息</span>
           <ul class="section_13 clearfloat">
-            <li style="width: 270px;">
+            <!--<li style="width: 270px;">
               行驶层级：
               <span>
 
 
-		                        省级
+		                        市级
 
                 		</span>
-            </li>
+            </li>-->
             <li style="width: 270px;">
               办件类型：
               <span>
@@ -142,7 +142,7 @@
               <span>
 
 
-		                        江苏省住房和城乡建设厅
+		                        无锡市住房和城乡建设局
 
                 		</span>
             </li>
@@ -267,9 +267,9 @@
 
 
           </ul>
-          <div class="section_12">
+          <!--<div class="section_12">
             <span>查看委托及其他协办部门信息</span>
-          </div>
+          </div>-->
         </div>
       </div>
       <div id="section2" class="section-content">
@@ -578,30 +578,8 @@
           </div>
         </div>
       </div>
-      <div id="section6" class="section-content">
-        <div class="section">
-          <span class="section_71">收费标准</span>
-          <table width="890" class="section_72">
 
-            <tbody><tr>
-              <td width="225">收费项目</td>
-              <td width="220">收费依据</td>
-              <td width="225">收费标准</td>
-              <td>收费减免</td>
-            </tr>
-
-            <tr>
-              <td>建设项目选址论证报告</td>
-              <td>市场调节价</td>
-              <td>市场调节价</td>
-              <td></td>
-            </tr>
-
-
-
-            </tbody></table>
-        </div>
-      </div>
+     
       <div id="section7" class="section-content">
         <div class="section">
           <span class="section_31">常见问题</span>
@@ -615,7 +593,7 @@
     <div class="main_right clearfloat">
       <div class="main_right_01 clearfloat">
         <div class="main_right_11">办理地点、时间</div>
-        <div class="main_right_12">设区市住房城乡建设系统行政主管部门办公地点<br>春夏季（3月1日~9月30日）：上午9:00~12:00，下午14:00~17:00；秋冬季（10月~2月）：上午9:00-12:00，下午13:30-17:00</div>
+        <div class="main_right_12">无锡市住房和城乡建设局办公地点<br>春夏季（3月1日~9月30日）：上午9:00~12:00，下午14:00~17:00；秋冬季（10月~2月）：上午9:00-12:00，下午13:30-17:00</div>
       </div>
       <div class="main_right_02 clearfloat">
         <!--<a href="#" class="main_right_21" target="_blank" onclick="myConllection();">加入收藏</a>
